# memories-ai-server

./: .env.example  .gitignore  Dockerfile  main.py  pyproject.toml
.github/workflows/: master_memories-ai-server.yml
src/: main.py
src/database/: db.py
src/database/db_models/: memories_db_models.py  verification_codes.py
src/routes/: routes.py
src/routes/chat/: chat.py
src/routes/upload/: upload.py
