[project]
name = "memories-ai-server"
version = "0.1.0"
description = "Travel Memories AI orchestrator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioodbc>=0.5.0",
    "dotenv>=0.9.9",
    "fastapi>=0.137.2",
    "pyodbc>=5.3.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = ["ruff>=0.15.17"]

[tool.ruff.lint]
extend-select = [
    "I",
    "E",
    "UP",
    "B",
    "FAST001",
    "FAST002",
    "FAST003",
    "BLE001",  # Do not catch blind exception
    "B006",    # Do not use mutable data structures for argument defaults
    "B007",    # Loop control variable {name} not used within loop body
    "B012",    # {name} inside finally blocks cause exceptions to be silenced
]

[tool.ruff.format]
indent-style = "tab"
quote-style = "double"
docstring-code-format = true
